* NEXT VERSION *
* Fixed bugs on Point Details tab where both the Purge Override settings and Discarding Extreme Values were not saving.
* Added db.useMetrics env boolean property to allow all queries to report times via the INFO log level.
* Fixed bug in JScience Library where any units with a 4 in the numerical multiplier would fail to load.
* Added workaround for bug on pages that try to hide() a node that isn't there.  This used to crash the page, now it logs the error to the js console if it exists, otherwise it is silent.
* Added SystemSettings Events to notify on Settings Change or Remove, this is a implementable interface for modules/core classes to use if desired SystemSettingsListener and SystemSettingsEventDispatcher
* Moved UI performance settings into its own System Settings Area
* Adjusted Point Hierarchy importer to allow merging of folders.  Folders with the same name are merged into system.  Points duplicated across folders will only be saved as the last folder they are stored in.
* Fixed bug in All Data Points List where after editing a data source the filter text remained but the filter was reset
* Fixed bug with Global Script inclusion for JavaScript engine where Global scripts needed to be defined first.
* Added feature to DataPointRT to allow the use of a custom timer in Interval Logging.  This can be useful when running simulations where time does not depend on Real Time. (Meta Data Point History Generate is one Example)


*Version 2.1.3*
* Fixed bug so alarms report page shows same alarms as legacy alarm page.
* Fixed bug so sorting on Data Source and Data Point tables works properly
* Added Do Not Log level for Alarms, this will not write anything to the database but will still fire events to be handled
* Added ability to import/export System Settings
* Added fine grain control for purging events on alarm level and type
* Changed showHeader and showToolbar url parameters to work without having to add them explicitly to the page tag.

